Style - updated Check Button Size and Style

--- a/isTriangle.html
+++ b/isTriangle.html
@@ -28,7 +28,7 @@
           <input type="number" name="" id="" placeholder=" Angle B " required/>
           <input type="number" name="" id="" placeholder=" Angle C " required />
         </div>
-        <button type="submit" id="checkBtn" class="btn-alternate">
+        <button type="submit" id="checkBtn" class="btn btn-alternate">
           Lets Check
         </button>
         <section id="output-section" class="container card-glass notVisible">
