--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
           </li>
           <li>
             <a
+              href="./areaOfTriangle.html"
+              target="_blank"
+              class="flex-box"
+              ><i class="fas fa-hand-point-right fa-2x"></i>Calculte Area of Triangle</a
+            >
+          </li>
+          <li>
+            <a
               href="https://replit.com/@RAHULKUVLEKAR/Project-TriangleQuiz?embed=1&output=1#index.js"
               target="_blank"
               class="flex-box"
