Feat - Added Quiz Application

--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
   <body>
     <main class="flex-box">
       <section class="fluid-container card-glass">
-        <h1 class="main-brand">Welcome to <span>' Fun with Triangles '</span></h1>
+        <h1 class="main-brand">
+          Welcome to <span>' Fun with Triangles '</span>
+        </h1>
         <ul class="main-links">
           <li>
             <a href="./isTriangle.html" class="flex-box"
               ><i class="fas fa-hand-point-right fa-2x"></i>Angles of
-              Triangle?</a
+              Triangle</a
             >
           </li>
           <li>
@@ -30,11 +32,14 @@
             >
           </li>
           <li>
-            <a
-              href="./areaOfTriangle.html"
-              target="_blank"
-              class="flex-box"
-              ><i class="fas fa-hand-point-right fa-2x"></i>Calculte Area of Triangle</a
+            <a href="./areaOfTriangle.html" class="flex-box"
+              ><i class="fas fa-hand-point-right fa-2x"></i>Calculte Area of
+              Triangle</a
+            >
+          </li>
+          <li>
+            <a href="./triangleQuiz.html" class="flex-box"
+              ><i class="fas fa-hand-point-right fa-2x"></i>Take a Quiz</a
             >
           </li>
           <li>
@@ -42,7 +47,7 @@
               href="https://replit.com/@RAHULKUVLEKAR/Project-TriangleQuiz?embed=1&output=1#index.js"
               target="_blank"
               class="flex-box"
-              ><i class="fas fa-hand-point-right fa-2x"></i>Take a Quiz</a
+              ><i class="fas fa-hand-point-right fa-2x"></i>Take a Quiz (CLI)</a
             >
           </li>
         </ul>
